tests/golden/errors/int_pow_negative.py
def exponent() -> int:
    return -1


print(2 ** exponent())
